<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorLight"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cloud_signup" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cloud_right" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/faces" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-32dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="monospace"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/subTitle1"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="monospace"
        android:text="@string/subTitle2"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="215dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="38dp"
            android:backgroundTint="@color/btn"
            android:drawableLeft="@drawable/google"
            android:fontFamily="monospace"
            android:text="@string/Google"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnApple"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/btn"
            android:drawableLeft="@drawable/apple_logo"
            android:fontFamily="monospace"
            android:text="@string/Apple"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/btn"
            android:drawableLeft="@drawable/facebook"
            android:fontFamily="monospace"
            android:text="@string/Facebook"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="@string/alreadyHaveAcc"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-180dp"
        android:layout_marginEnd="-70dp"
        android:backgroundTint="@color/bgColorLight"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="monospace"
        android:text="@string/footer1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="monospace"
        android:text="@string/footer2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>