<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorDark"
    tools:context=".JournalingActivity">

    <ImageView
        android:id="@+id/imageView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/starsheader" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="monospace"
        android:text="@string/jTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-51dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="355dp"
            android:layout_height="169dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/darkblue"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="start|top"
            android:hint="@string/journalHint"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/sky"
            android:textSize="14sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="202dp"
        android:fontFamily="monospace"
        android:text="@string/jSubTitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <ImageView
        android:id="@+id/jHomeButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_page_white" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/btnHome"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView78"
        app:layout_constraintTop_toBottomOf="@+id/jHomeButton" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="@string/textarea"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView80"
        app:layout_constraintVertical_bias="0.193" />

    <ImageView
        android:id="@+id/imageView80"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:srcCompat="@drawable/faces" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bgColorLight"
        android:fontFamily="monospace"
        android:text="@string/journalSave"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="220dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="62dp"
                android:fontFamily="monospace"
                android:text="@string/radioBtn1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="62dp"
                android:fontFamily="monospace"
                android:text="@string/radioBtn2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="62dp"
                android:fontFamily="monospace"
                android:text="@string/radioBtn3"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="62dp"
                android:fontFamily="monospace"
                android:text="@string/radioBtn4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/today"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

</androidx.constraintlayout.widget.ConstraintLayout>