<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorDark"
    android:textAlignment="center"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profileheader" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/editTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/fname"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/lName"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/fNameHint"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#8DD9D9D9" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/lNameHint"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#8DD9D9D9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/country"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/setAge"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#8DD9D9D9" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/setCountry"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#8DD9D9D9" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/sky"
        android:text="@string/saveButton"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="588dp"
        android:layout_height="426dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        app:srcCompat="@drawable/orange_circle_face" />

</androidx.constraintlayout.widget.ConstraintLayout>